# telegram2logseq

./: Makefile  README.md  pyproject.toml
telegram2logseq/: __main__.py
